# tldrop

./: .env.example  .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml
docs/: PRD.md  TECHNICAL_SPEC.md
tests/: __init__.py  test_fetcher.py
tldrop/: __init__.py  cli.py  config.py
tldrop/agents/: __init__.py  base.py  feed.py  output.py  summarizer.py
tldrop/core/: __init__.py  fetcher.py  orchestrator.py  state.py
tldrop/models/: __init__.py  post.py
tldrop/templates/: summary.html.j2  summary.md.j2
